menukort og forside ikke done

--- a/drinkskort.html
+++ b/drinkskort.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="menukort.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
+        rel="stylesheet">
     <title>Drinks & Soft drinks</title>
 </head>
 
@@ -43,115 +51,117 @@
 
 
         <!------------------------------------------- COCKTAILS & SOFT DRINKS MENU ----------------------------------------------------->
-        <div id="wine_cocktails" class="menu_section">
+        <div class="menu_section">
             <h1>Drinks & Soft Drinks</h1>
-            <!--------------- COCKTAILS --------------->
-            <div>
-                <h2>Drinks</h2>
-                <ul>
-                    <li>
-                        <div class="menu_left">
-                            <p>Aperol Spritz</p>
-                        </div>
-                        <hr class="menu_line">
-                        <div class="menu_price">100,- DKK</div>
-                    </li>
+            <div class="grid_1-1_drinks">
 
-                    <li>
-                        <div class="menu_left">
-                            <p>Limoncello Spritz</p>
-                        </div>
-                        <hr class="menu_line">
-                        <div class="menu_price">100,- DKK</div>
-                    </li>
+                <!--------------- COCKTAILS --------------->
+                <div>
+                    <h2>Drinks</h2>
+                    <ul>
+                        <li>
+                            <div class="menu_left">
+                                <p>Aperol Spritz</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">100,- DKK</div>
+                        </li>
 
-                    <li>
-                        <div class="menu_left">
-                            <p>Gin Hass</p>
-                        </div>
-                        <hr class="menu_line">
-                        <div class="menu_price">100,- DKK</div>
-                    </li>
+                        <li>
+                            <div class="menu_left">
+                                <p>Limoncello Spritz</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">100,- DKK</div>
+                        </li>
 
-                    <li>
-                        <div class="menu_left">
-                            <p>Kir</p>
-                        </div>
-                        <hr class="menu_line">
-                        <div class="menu_price">90,- DKK</div>
-                    </li>
+                        <li>
+                            <div class="menu_left">
+                                <p>Gin Hass</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">100,- DKK</div>
+                        </li>
 
-                    <li>
-                        <div class="menu_left">
-                            <p>Negroni Shagliato</p>
-                        </div>
-                        <hr class="menu_line">
-                        <div class="menu_price">100,- DKK</div>
-                    </li>
+                        <li>
+                            <div class="menu_left">
+                                <p>Kir</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">90,- DKK</div>
+                        </li>
 
-                    <li>
-                        <div class="menu_left">
-                            <p>Port Tonic</p>
-                        </div>
-                        <hr class="menu_line">
-                        <div class="menu_price">90,- DKK</div>
-                    </li>
+                        <li>
+                            <div class="menu_left">
+                                <p>Negroni Shagliato</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">100,- DKK</div>
+                        </li>
 
-                    <li>
-                        <div class="menu_left">
-                            <p>Moscow Mule</p>
-                        </div>
-                        <hr class="menu_line">
-                        <div class="menu_price">90,- DKK</div>
-                    </li>
+                        <li>
+                            <div class="menu_left">
+                                <p>Port Tonic</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">90,- DKK</div>
+                        </li>
 
-                    <li>
-                        <div class="menu_left">
-                            <p>Irish Coffee</p>
-                        </div>
-                        <hr class="menu_line">
-                        <div class="menu_price">120,- DKK</div>
-                    </li>
+                        <li>
+                            <div class="menu_left">
+                                <p>Moscow Mule</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">90,- DKK</div>
+                        </li>
 
-                    <li>
-                        <div class="menu_left">
-                            <p>8 Year Armagnac Domaine Horgelus</p>
-                        </div>
-                        <hr class="menu_line">
-                        <div class="menu_price">70,- DKK</div>
-                    </li>
+                        <li>
+                            <div class="menu_left">
+                                <p>Irish Coffee</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">120,- DKK</div>
+                        </li>
 
-                    <li>
-                        <div class="menu_left">
-                            <p>12 Year Amagnac Domaine Horgelus</p>
-                        </div>
-                        <hr class="menu_line">
-                        <div class="menu_price">90,- DKK</div>
-                    </li>
+                        <li>
+                            <div class="menu_left">
+                                <p>8 Year Armagnac Domaine Horgelus</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">70,- DKK</div>
+                        </li>
 
-                    <li>
-                        <div class="menu_left">
-                            <p>20 Year Armagnac Domaine Horgelus</p>
-                        </div>
-                        <hr class="menu_line">
-                        <div class="menu_price">110,- DKK</div>
-                    </li>
+                        <li>
+                            <div class="menu_left">
+                                <p>12 Year Amagnac Domaine Horgelus</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">90,- DKK</div>
+                        </li>
 
-                    <li>
-                        <div class="menu_left">
-                            <p>Limoncello</p>
-                        </div>
-                        <hr class="menu_line">
-                        <div class="menu_price">70,- DKK</div>
-                    </li>
-                </ul>
+                        <li>
+                            <div class="menu_left">
+                                <p>20 Year Armagnac Domaine Horgelus</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">110,- DKK</div>
+                        </li>
+
+                        <li>
+                            <div class="menu_left">
+                                <p>Limoncello</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">70,- DKK</div>
+                        </li>
+                    </ul>
+                </div>
+
+                <!--------------- IMG DRINK -------------->
+                <div>
+                    <img class="drinks_img" src="img/drink.webp" alt="billede af aperol spritz">
+                </div>
             </div>
-
-            <!--------------- IMG DRINK -------------->
-            <div>
-                <img src="" alt="">
-            </div>
-
             <!----------------- SOFT DRINKS ---------------->
             <div>
                 <h2>Soft drinks</h2>
@@ -216,8 +226,6 @@
                     </li>
                 </ul>
             </div>
-
-
         </div>
 
 
