--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
+        rel="stylesheet">
     <title>Forside</title>
 </head>
 
@@ -40,16 +48,11 @@
         </div>
 
         <div class="forside_button_margin">
-            <div class="forside_button">
-                <a class="forside_button_tekst" href="menukort.html">MENU</a>
-            </div>
-            <div class="forside_button">
-                <a class="forside_button_tekst" href="bord.html">BOOK A TABLE</a>
-            </div>
-            <div class="forside_button">
-                <a class="forside_button_tekst" href="events.html">EVENTS</a>
-            </div>
+            <a class="forside_button" href="menukort.html">MENU</a>
+            <a class="forside_button" href="bord.html">BOOK A TABLE</a>
+            <a class="forside_button" href="events.html">EVENTS</a>
         </div>
+
 
         <div class="location_opening_backcolor grid_1_1">
             <div>
