--- a/events.html
+++ b/events.html
@@ -108,6 +108,7 @@
         </div>
       </div>
     </footer>
-    <script src="events.js" />
+    <script src="events.js"></script>
+    <script src="menu.js"></script>
   </body>
 </html>
